bugfix: fix bug with width of team view on small window

--- a/client/src/components/UI/CardWithTitle/CardWithTitle.module.scss
+++ b/client/src/components/UI/CardWithTitle/CardWithTitle.module.scss
@@ -26,12 +26,3 @@
 .content {
   padding: 0.3em;
 }
-
-@media only screen and (max-width: 1400px), only screen and (max-height: 700px) {
-  .tileTitle {
-    font-size: 1em;
-  }
-  .content {
-    font-size: 0.8em;
-  }
-}
