--- a/client/src/containers/Teams/Team/team.module.scss
+++ b/client/src/containers/Teams/Team/team.module.scss
@@ -54,13 +54,14 @@ only screen and (max-height: 700px) {
 @media only screen and (max-width: 900px) {
   .wrapper {
     height: 80vh;
+    width: 90%;
 
   }
   .container {
     grid-template-rows: 3fr 1fr 1fr;
     grid-template-columns: 1fr;
     height: 100%;
-    width: 90%;
+    width: 100%;
   }
 
   .firstColumn {
